# web3-LP-browser

./: .gitignore  .npmrc  BUILD-WINDOWS.bat  CHECK-SETUP.bat  FIX-MISSING-MODULE.bat  INSTALL-DEPENDENCIES.bat  INSTALL_FIX.md  INSTALL_REPAIR_v0.3.4.md  PROJECT_REVIEW.md  README.md  REPAIR-INSTALL.bat  RUN-DESKTOP.bat  RUN-WEB-PREVIEW.bat  RUN-WEB.bat  SHIELDS_RELEASE.md  START-BROWSER.bat  VALIDATION.md  VALIDATION_INSTALL_FIX.md  VALIDATION_RESULTS.txt  VALIDATION_v0.3.4.md  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
components/browser/: browser-shell.tsx  devtools-panel.tsx  history-panel.tsx  settings-panel.tsx  start-page.tsx  tab-strip.tsx  toolbar.tsx  webview.tsx
lib/browser/: adblock.ts  native.ts  navigation.ts  store.tsx  types.ts
scripts/: check-ad-accelerator.mjs  check-dependencies.cjs  check-native-wiring.mjs  check-navigation.mjs  check-shields.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  shields.js
